--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -32,11 +32,21 @@
         android:id="@+id/tvDeskripsi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:text="Deskripsi"
         app:layout_constraintEnd_toEndOf="@+id/tvTanggal"
         app:layout_constraintStart_toStartOf="@+id/tvNama"
-        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCheckmark" />
+
+
+    <Button
+        android:id="@+id/btnCheckmark"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:text="save"
+        android:background="@drawable/baseline_check_24"
+        app:layout_constraintEnd_toEndOf="@+id/tvTanggal"
+        app:layout_constraintTop_toBottomOf="@+id/tvTanggal" />
 
     <Button
         android:id="@+id/btnStart"
